--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>CRM</title>
-  <base href="/">
+  <base href="#">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon.jpg">
 </head>
 <body>
   <app-root></app-root>
+  <script>document.write('<base href="' + document.location + '" />');</script>
 </body>
 </html>
